<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/setting_not_disturb_radioGroup_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/setting_not_disturb_in_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_use" />

        <RadioButton
            android:id="@+id/setting_not_disturb_no_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/no_use" />
    </RadioGroup>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/blue" >
    </View>

    <LinearLayout
        android:id="@+id/setting_not_disturb_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/setting_not_disturb_radioGroup_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/setting_not_disturb_everyDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/every_day" />

            <RadioButton
                android:id="@+id/setting_not_disturb_radiobutton_workday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workday" />

            <RadioButton
                android:id="@+id/setting_not_disturb_radiobutton_weekend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekend" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/setting_not_disturb_radioGroup_custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/setting_not_disturb_radiobutton_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom" />
            
        </RadioGroup>

        <LinearLayout
            android:id="@+id/setting_not_disturb_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/setting_not_disturb_checkbox_monday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/setting_not_disturb_checkbox_tuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/setting_not_disturb_checkbox_wednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/wednesday" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/setting_not_disturb_checkbox_thursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/thursday" />

                <CheckBox
                    android:id="@+id/setting_not_disturb_checkbox_friday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/friday" />

                <CheckBox
                    android:id="@+id/setting_not_disturb_checkbox_saturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/saturday" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <CheckBox
                    android:id="@+id/setting_not_disturb_checkbox_sunday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sunday" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/blue" >
        </View>

        <LinearLayout
            android:id="@+id/setting_not_disturb_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/setting_not_disturb_start_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/start_interval" />

            <TextView
                android:id="@+id/setting_not_disturb_start_time_text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="00:00" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/blue" >
        </View>

        <LinearLayout
            android:id="@+id/setting_not_disturb_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/setting_not_disturb_end_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/end_interval" />

            <TextView
                android:id="@+id/setting_not_disturb_end_time_text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="24:00" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/blue" >
        </View>
    </LinearLayout>

</LinearLayout>